--- a/Code/Client/Windows/OfficeCheevosClient/OfficeCheevosClient/Properties/Resources.resx
+++ b/Code/Client/Windows/OfficeCheevosClient/OfficeCheevosClient/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="cheevo_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cheevo_sound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="tray" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tray.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
